--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             
 <!--             <img src="images/1.jpg" alt=""> -->
             <img src="https://play-lh.googleusercontent.com/sq0IEncb9H9eqxqC_ReQRLEmj3RLH_C8PjOMGdzvuyZ-XDvCt_S-E8M3Sc4-hpv2eKY=s180-rw" alt="الكيان للإستثمار العقاري" onclick=" window.open('https://play.google.com/store/apps/details?id=com.ahmed_m_hassaan.alkyaan','_blank')" >
-            <img src="images/2.jpg" alt="">
-            <img src="images/3.jpg" alt="">
+            <img src="https://github.com/AhmedMHassaan/GP/blob/main/Grad%20Work/v3/Hassaan/UI%20Screen/4.jpg" alt="تطبيق Candle" onclick=" window.open('https://github.com/AhmedMHassaan/GradProject','_blank')" >
+            <img src="https://ahmedmhassaan.000webhostapp.com/logo.png" alt="تطبيق مدينتي - محافظة قنا - مركز نقادة - تطبيق مركز تقادة" onclick=" window.open('https://github.com/AhmedMHassaan/NakadaSystem','_blank')" >
+<!--             <img src="images/2.jpg" alt=""> -->
+<!--             <img src="images/3.jpg" alt=""> -->
             <img src="images/4.jpg" alt="">
             <img src="images/5.png" alt="">
             <img src="images/8.jpg" alt="">
