make linked in badge open in new tab

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div id="box" class="badge-base LI-profile-badge" data-locale="ar_AE" data-size="large" data-theme="light"
                 data-type="VERTICAL" data-vanity="ahmedmhassaan" data-version="v1"><a
                     class="badge-base__link LI-simple-link"
-                    href="https://eg.linkedin.com/in/ahmedmhassaan?trk=profile-badge">Ahmed Mohamed Hassaan</a></div>
+                    href="https://eg.linkedin.com/in/ahmedmhassaan?trk=profile-badge" target="_blank">Ahmed Mohamed Hassaan</a></div>
 
         </div>
     </section>
