--- a/index.html
+++ b/index.html
@@ -111,10 +111,12 @@
                     for the best.
                 </p>
             </div> -->
-            <div id="box" class="badge-base LI-profile-badge" data-locale="ar_AE" data-size="large" data-theme="light"
+            <div id="box" class="badge-base LI-profile-badge" data-locale="ar_AE" data-size="medium" data-theme="light"
                 data-type="VERTICAL" data-vanity="ahmedmhassaan" data-version="v1"><a
                     class="badge-base__link LI-simple-link"
-                    href="https://eg.linkedin.com/in/ahmedmhassaan?trk=profile-badge" target="_blank">Ahmed Mohamed Hassaan</a></div>
+                    style="color:black;"
+                    href="https://eg.linkedin.com/in/ahmedmhassaan" target="_blank">Ahmed Mohamed Hassaan</a></div>
+
 
         </div>
     </section>
